--- a/html/cart.html
+++ b/html/cart.html
@@ -157,7 +157,36 @@
             </div>
         </div>
     </main>
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <h3>Hiệu Sách SGU</h3>
+                    <p>Nơi tri thức bắt đầu và lan tỏa. Cảm ơn bạn đã ghé thăm.</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Liên kết nhanh</h3>
+                    <ul>
+                        <li><a href="#">Về chúng tôi</a></li>
+                        <li><a href="#">Chính sách bảo mật</a></li>
+                        <li><a href="#">Điều khoản dịch vụ</a></li>
+                        <li><a href="#">Liên hệ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Theo dõi chúng tôi</h3>
+                    <div class="social-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=AWhig_vOAFDfX0P4"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2025 Hiệu Sách SGU. Đã đăng ký bản quyền. (CÓ MỚI LẠ)</p>
+            </div>
+        </div>
+    </footer>
     <script src="../js/cart-script.js"></script>
 </body>
 </html>
