--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                 <div class="slider-container">
                     <button class="prev-btn" onclick="changeSlide(-1)">❮</button>
                     <div class="slides">
-                        <img src="https://placehold.co/1200x350/C8A2C8/ffffff?text=S%C3%A1ch+1:+M%E1%BB%98T+%C4%90%E1%BB%9AI+NH%C6%AF+K%E1%BA%BC+T%C3%8CCM+%C4%90%E1%BB%9CNG" class="slide active" alt="Sách 1">
-                        <img src="https://placehold.co/1200x350/B0E0E6/333333?text=S%C3%A1ch+2:+NG%C6%AF%E1%BB%9CI+G%C3%81C+C%C3%82Y+L%E1%BB%9CN+N%C3%80O" class="slide" alt="Sách 2">
-                        <img src="https://placehold.co/1200x350/FF8800/333333?text=S%C3%A1ch+3:+ELON+MUSK+TESLA+SPACEX" class="slide" alt="Sách 3">
+                        <img src="img/tu-van-in-brochure.png" class="slide active" alt="Sách 1">
+                        <img src="img/jack_London.png" class="slide" alt="Sách 2">
+                        <img src="img/download.png" class="slide" alt="Sách 3">
                     </div>
                     <button class="next-btn" onclick="changeSlide(1)">❯</button>
                     <div class="dots-container">
@@ -123,8 +123,8 @@
                 </div>
             </div>
             <div class="bottom-banners-grid">
-                <a href="#" class="banner-card"><img src="https://placehold.co/300x150/9C27B0/FFFFFF?text=Chiến+Thần+Ngữ+Văn" alt="Bottom Banner 1"></a>
-                <a href="#" class="banner-card"><img src="https://placehold.co/300x150/E91E63/FFFFFF?text=20-10+Mến+Thương" alt="Bottom Banner 2"></a>
+                <a href="#" class="banner-card"><img src="img/350x150(2).jpg" alt="Bottom Banner 1"></a>
+                <a href="#" class="banner-card"><img src="img/350x150.jpg" alt="Bottom Banner 2"></a>
                 <a href="#" class="banner-card"><img src="https://placehold.co/300x150/FF5722/FFFFFF?text=Vững+Ngoại+Ngữ" alt="Bottom Banner 3"></a>
                 <a href="#" class="banner-card"><img src="https://placehold.co/300x150/607D8B/FFFFFF?text=October+Must-Read" alt="Bottom Banner 4"></a>
             </div>
