--- a/html/login.html
+++ b/html/login.html
@@ -10,12 +10,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
-    <script src="../js/main.js" defer></script>
-    <script src="../js/login-script.js" defer></script>
 </head>
 <body>
-    <header class="header">
+<header class="header">
         <div class="top-bar">
             <div class="container">
                 <div class="top-links">
@@ -95,6 +92,7 @@
             </div>
         </div>
     </header>
+
     <div class="auth-container">
         <div class="form-section">
             <div id="login-form-container" class="form-wrapper">
@@ -109,7 +107,7 @@
                         <i class="fas fa-eye-slash toggle-password"></i>
                     </div>
                     <div class="form-options">
-                    <label><input type="checkbox"> Ghi nhớ đăng nhập</label>
+                        <label><input type="checkbox"> Ghi nhớ đăng nhập</label>
                         <a href="#" id="forgot-password-link">Quên mật khẩu?</a>
                     </div>
                     <button type="submit" class="btn btn-login">Đăng Nhập</button>
@@ -135,7 +133,7 @@
                         <input type="email" placeholder="Nhập email của bạn" required>
                     </div>
                     <div class="input-group">
-                        <input type="password" placeholder="nhập mật khẩu" required>
+                        <input type="password" placeholder="Nhập mật khẩu" required>
                         <i class="fas fa-eye-slash toggle-password"></i>
                     </div>
                     <div class="input-group">
@@ -146,7 +144,6 @@
                 </form>
             </div>
         </div>
-
         <div class="panel-section">
             <div id="login-panel" class="panel">
                 <img src="../img/SGU_logo.jpg" alt="Robot Chào Mừng" class="panel-img">
@@ -162,20 +159,40 @@
             </div>
         </div>
     </div>
-<div id="forgot-password-modal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <h2>Quên Mật Khẩu</h2>
-        <p>Vui lòng nhập email đã đăng ký. Chúng tôi sẽ giúp bạn tìm lại mật khẩu.</p>
-        <form id="forgot-password-form">
-            <div class="input-group">
-                <label for="forgot-email">Email</label>
-                <input type="email" id="forgot-email" placeholder="Nhập email của bạn" required>
+
+    <div id="forgot-password-modal" class="modal">
+        </div>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <h3>Hiệu Sách SGU</h3>
+                    <p>Nơi tri thức bắt đầu và lan tỏa. Cảm ơn bạn đã ghé thăm.</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Liên kết nhanh</h3>
+                    <ul>
+                        <li><a href="#">Về chúng tôi</a></li>
+                        <li><a href="#">Chính sách bảo mật</a></li>
+                        <li><a href="#">Điều khoản dịch vụ</a></li>
+                        <li><a href="#">Liên hệ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Theo dõi chúng tôi</h3>
+                    <div class="social-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://youtu.be/dQw4w9WgXcQ?si=AWhig_vOAFDfX0P4"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary form-btn">Gửi</button>
-        </form>
-    </div>
-</div>
+            <div class="copyright">
+                <p>&copy; 2025 Hiệu Sách SGU. Đã đăng ký bản quyền. (CÓ MỚI LẠ)</p>
+            </div>
+        </div>
+    </footer>
     <script src="../js/login-script.js"></script>
 </body>
 </html>
