thằng lol Nam kêu t push

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     
     <script src="js/script.js" defer></script>
-
     <script src="js/main.js" defer></script>
-    <script src="js/script.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -27,7 +25,8 @@
                     <p>Khuyến mãi hot</p>
                 </div>
                 <div class="top-contact">
-                    <span><i class="fas fa-headset"></i> Hỗ trợ</span>
+                    <a href="https://lh3.googleusercontent.com/pw/AP1GczM2LM7D7_E5k7W9EnTYTFsOtOezOM5lq6yGqIL80hKlJFfQ8Vhw4jBixQ5nfyqCeQPJOIhd7cGLyWJVDPekSbLxqq_D9wfVr47qbDgfGJ65QcaVyBbkfuIX4t3gAhgi4isLdnVXrt1GOCewMloKX6pH-g=w818-h928-s-no-gm?authuser=0"><i class="fas fa-headset"></i> Hỗ trợ</a></span>
+                </div>
                 </div>
             </div>
         </div>
@@ -163,10 +162,12 @@
                         </a>
                     </div>
                     <div class="book-card">
+                        <a href="html/product-detail.html">
                         <img src="https://placehold.co/300x450/C8E6C9/000000?text=Bìa+Sách+3" alt="Hành Trình Khám Phá">
                         <h3>Hành Trình Khám Phá</h3>
                         <p class="author">Tác giả C</p>
                         <p class="price">99.000đ</p>
+                        </a>
                         <a href="#" class="btn btn-secondary add-to-cart-btn" 
                             data-id="SP003" 
                             data-name="Hành Trình Khám Phá" 
@@ -212,9 +213,9 @@
                 <div class="footer-col">
                     <h3>Theo dõi chúng tôi</h3>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="https://youtu.be/dQw4w9WgXcQ?si=AWhig_vOAFDfX0P4"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/share/1JXhJoUyGf/"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/_karaz.z?igsh=MXF0bzFwM3d4OTI2YQ=="><i class="fab fa-instagram"></i></a>
+                        <a href="https://youtu.be/7pvnUWAdhTY?si=7PPq3liASqy9WDN4"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
