--- a/html/product-detail.html
+++ b/html/product-detail.html
@@ -80,7 +80,7 @@
                                 <div class="meta-item"><span>Nhà cung cấp:</span><a href="#">Penguin Books</a></div>
                                 <div class="meta-item"><span>Tác giả:</span><a href="#">SenLinYu</a></div>
                                 <div class="meta-item"><span>Nhà xuất bản:</span><a href="#">Del Rey</a></div>
-                                <div class="meta-item"><span>Hình thức bìa:</span><span>Bìa Mềm</span></div>
+                                <div class="meta-item"><span>Thể Loại:</span><span>Bìa Mềm</span></div>
                             </div>
                             <div class="product-review-summary">
                                 <div class="stars">
