--- a/index.html
+++ b/index.html
@@ -117,32 +117,38 @@
                     <span class="category-name">Tất Cả</span>
                 </a>
 
-                <a href="#" class="category-bar-item" data-category="kinhte">
+                <a href="#" class="category-bar-item" data-category="Sách Kinh Tế">
                     <div class="category-bar-icon bg-green">
                         <i class="fas fa-chart-line"></i>
                     </div>
                     <span class="category-name">Kinh Tế</span>
                 </a>
 
-                <a href="#" class="category-bar-item" data-category="kynangsong">
+                <a href="#" class="category-bar-item" data-category="Kỹ Năng Sống">
                     <div class="category-bar-icon bg-orange">
                         <i class="fas fa-brain"></i>
                     </div>
                     <span class="category-name">Kỹ Năng Sống</span>
                 </a>
 
-                <a href="#" class="category-bar-item" data-category="fiction">
+                <a href="#" class="category-bar-item" data-category="Fiction - Thriller">
                     <div class="category-bar-icon bg-red">
                         <i class="fas fa-dragon"></i>
                     </div>
                     <span class="category-name">Fiction</span>
                 </a>
 
-                <a href="#" class="category-bar-item" data-category="vanhoc">
+                <a href="#" class="category-bar-item" data-category="Văn Học">
                     <div class="category-bar-icon bg-purple">
                         <i class="fas fa-book-open"></i>
                     </div>
                     <span class="category-name">Văn Học</span>
+                </a>
+                <a href="#" class="category-bar-item" data-category="Manga - Comic">
+                    <div class="category-bar-icon bg-purple">
+                        <i class="fas fa-book-open"></i>
+                    </div>
+                    <span class="category-name">Manga</span>
                 </a>
 
             </div>
